Media Libs - Framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,6 +371,8 @@ set(THEROCK_BUNDLED_NUMACTL)
 set(THEROCK_BUNDLED_SQLITE3)
 set(THEROCK_BUNDLED_ZLIB)
 set(THEROCK_BUNDLED_ZSTD)
+set(THEROCK_BUNDLED_LIBVA)
+set(THEROCK_BUNDLED_LIBVADRM)
 
 if(THEROCK_BUNDLE_SYSDEPS)
   message(STATUS "Building with bundled system dependencies enabled")
@@ -397,6 +399,10 @@ if(THEROCK_BUNDLE_SYSDEPS)
     set(THEROCK_BUNDLED_SQLITE3 therock-sqlite3)
     set(THEROCK_BUNDLED_ZLIB therock-zlib)
     set(THEROCK_BUNDLED_ZSTD therock-zstd)
+    if(THEROCK_ENABLE_SYSDEPS_AMD_MESA)
+      set(THEROCK_BUNDLED_LIBVA rocm_sysdeps_libva)
+      set(THEROCK_BUNDLED_LIBVADRM rocm_sysdeps_libva-drm)
+    endif()
   elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     set(THEROCK_BUNDLED_BZIP2 therock-bzip2)
     set(THEROCK_BUNDLED_SQLITE3 therock-sqlite3)
@@ -439,6 +445,9 @@ add_subdirectory(comm-libs)
 add_subdirectory(math-libs)
 add_subdirectory(ml-libs)
 add_subdirectory(iree-libs)
+if(THEROCK_ENABLE_SYSDEPS_AMD_MESA)
+  add_subdirectory(media-libs)
+endif()
 
 if(THEROCK_BUILD_TESTING)
   add_subdirectory(examples)
