Media - Update deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,8 +371,8 @@ set(THEROCK_BUNDLED_NUMACTL)
 set(THEROCK_BUNDLED_SQLITE3)
 set(THEROCK_BUNDLED_ZLIB)
 set(THEROCK_BUNDLED_ZSTD)
-set(THEROCK_BUNDLED_LIBVA)
-set(THEROCK_BUNDLED_LIBVADRM)
+set(THEROCK_BUNDLED_AMDMESA)
+
 
 if(THEROCK_BUNDLE_SYSDEPS)
   message(STATUS "Building with bundled system dependencies enabled")
