Fix - bundled name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -401,8 +401,7 @@ if(THEROCK_BUNDLE_SYSDEPS)
     set(THEROCK_BUNDLED_ZLIB therock-zlib)
     set(THEROCK_BUNDLED_ZSTD therock-zstd)
     if(THEROCK_ENABLE_SYSDEPS_AMD_MESA)
-      set(THEROCK_BUNDLED_LIBVA rocm_sysdeps_libva)
-      set(THEROCK_BUNDLED_LIBVADRM rocm_sysdeps_libva-drm)
+      set(THEROCK_BUNDLED_AMDMESA therock-amd-mesa)
     endif()
   elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     set(THEROCK_BUNDLED_BZIP2 therock-bzip2)
