Packaging - Add python infra for media

--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -326,7 +326,7 @@ feature_group = "CORE"  # Part of core, enabled by default
 artifact_group = "media"
 type = "target-neutral"
 artifact_deps = ["sysdeps"]
-feature_group = "MEDIA"
+feature_group = "MEDIA_LIBS" # Controlled by THEROCK_ENABLE_MEDIA_LIBS
 disable_platforms = ["windows"]
 
 [artifacts.sysdeps-expat]
@@ -543,15 +543,17 @@ disable_platforms = ["windows"]
 # --- Media Integration ---
 
 [artifacts.rocdecode]
-artifact_group = "media-libs"
+artifact_group = "media"
 type = "target-neutral"
-artifact_deps = ["core-runtime", "core-hip", "base"]
+artifact_deps = ["core-runtime", "core-hip", "base", "sysdeps", "sysdeps-amd-mesa"]
+feature_group = "MEDIA_LIBS" # Controlled by THEROCK_ENABLE_MEDIA_LIBS
 disable_platforms = ["windows"]
 
 [artifacts.rocjpeg]
-artifact_group = "media-libs"
+artifact_group = "media"
 type = "target-neutral"
-artifact_deps = ["core-runtime", "core-hip", "base"]
+artifact_deps = ["core-runtime", "core-hip", "base", "sysdeps", "sysdeps-amd-mesa"]
+feature_group = "MEDIA_LIBS" # Controlled by THEROCK_ENABLE_MEDIA_LIBS
 disable_platforms = ["windows"]
 
 # --- Communication Libraries (per-arch) ---
