--- a/media-libs/CMakeLists.txt
+++ b/media-libs/CMakeLists.txt
@@ -9,7 +9,7 @@ if(THEROCK_ENABLE_ROCDECODE)
     EXCLUDE_FROM_ALL
     NO_MERGE_COMPILE_COMMANDS
     OUTPUT_ON_FAILURE
-    EXTERNAL_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/rocdecode"
+    EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_LIBRARIES_SOURCE_DIR}/projects/rocdecode"
     BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/rocdecode"
     COMPILER_TOOLCHAIN
       amd-hip
@@ -19,10 +19,6 @@ if(THEROCK_ENABLE_ROCDECODE)
       ${THEROCK_BUNDLED_AMDMESA}
       hip-clr
     BUILD_DEPS
-      amd-llvm
-      rocprofiler-register
-      ${THEROCK_BUNDLED_LIBDRM}
-      ${THEROCK_BUNDLED_AMDMESA}
     CMAKE_ARGS
       -DROCM_PATH=${CMAKE_BINARY_DIR}/dist/rocm
     INTERFACE_LINK_DIRS
@@ -70,7 +66,7 @@ if(THEROCK_ENABLE_ROCJPEG)
     EXCLUDE_FROM_ALL
     NO_MERGE_COMPILE_COMMANDS
     OUTPUT_ON_FAILURE
-    EXTERNAL_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/rocjpeg"
+    EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_LIBRARIES_SOURCE_DIR}/projects/rocjpeg"
     BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/rocjpeg"
     COMPILER_TOOLCHAIN
       amd-hip
@@ -80,10 +76,6 @@ if(THEROCK_ENABLE_ROCJPEG)
       ${THEROCK_BUNDLED_AMDMESA}
       hip-clr
     BUILD_DEPS
-      amd-llvm
-      rocprofiler-register
-      ${THEROCK_BUNDLED_LIBDRM}
-      ${THEROCK_BUNDLED_AMDMESA}
     CMAKE_ARGS
       -DROCM_PATH=${CMAKE_BINARY_DIR}/dist/rocm
     INTERFACE_LINK_DIRS
