--- a/media-libs/artifact-rocdecode.toml
+++ b/media-libs/artifact-rocdecode.toml
@@ -3,3 +3,6 @@
 [components.dev."media-libs/rocdecode/stage"]
 [components.lib."media-libs/rocdecode/stage"]
 [components.test."media-libs/rocdecode/stage"]
+include = [
+  "share/rocdecode/**",
+]
