--- a/media-libs/artifact-rocjpeg.toml
+++ b/media-libs/artifact-rocjpeg.toml
@@ -3,3 +3,6 @@
 [components.dev."media-libs/rocjpeg/stage"]
 [components.lib."media-libs/rocjpeg/stage"]
 [components.test."media-libs/rocjpeg/stage"]
+include = [
+  "share/rocjpeg/**",
+]
