--- a/.github/workflows/release_portable_linux_packages.yml
+++ b/.github/workflows/release_portable_linux_packages.yml
@@ -337,15 +337,15 @@ jobs:
         id: url-encode-tar
         run: python -c "from urllib.parse import quote; print('tar_url=${{ needs.setup_metadata.outputs.cloudfront_base_url }}/tarball/' + quote('${{ env.FILE_NAME }}'))" >> ${GITHUB_OUTPUT}
 
-      - name: Trigger build JAX wheels
+      - name: Trigger release JAX wheels
         # TODO: Enable JAX wheels for prereleases
         if: ${{ env.RELEASE_TYPE != 'prerelease' && github.repository_owner == 'ROCm' }}
         uses: benc-uk/workflow-dispatch@e2e5e9a103e331dad343f381a29e654aea3cf8fc # v1.2.4
         with:
-          workflow: build_linux_jax_wheels.yml
+          workflow: release_portable_linux_jax_wheels.yml
+          ref: ${{ inputs.ref || github.ref_name }}
           inputs: |
             { "amdgpu_family": "${{ matrix.target_bundle.amdgpu_family }}",
-              "python_version": "3.12",
               "release_type": "${{ env.RELEASE_TYPE }}",
               "s3_subdir": "${{ env.S3_SUBDIR }}",
               "s3_staging_subdir": "${{ env.S3_STAGING_SUBDIR }}",
