--- a/ml-libs/artifact-composable-kernel.toml
+++ b/ml-libs/artifact-composable-kernel.toml
@@ -1,9 +1,9 @@
 # composable-kernel
 [components.dbg."ml-libs/composable_kernel/stage"]
 [components.dev."ml-libs/composable_kernel/stage"]
+include = [
+  "include/ck/**",
+  "lib/cmake/composable_kernel/*",
+]
 [components.doc."ml-libs/composable_kernel/stage"]
 [components.lib."ml-libs/composable_kernel/stage"]
-include = [
-  "share/composable_kernel/**",
-]
-[components.run."ml-libs/composable_kernel/stage"]
