Media Part 1 - Include libs (#3358)
## Motivation

Part 1 of PR #3098 - Media Libs without packaging or tests

## Technical Details

Address reviewer comments to split PR #3098

## Test Plan

Should build media libs

## Test Result

All current tests should pass

## Submission Checklist

- [ x] Look over the contributing guidelines at
https://github.com/ROCm/ROCm/blob/develop/CONTRIBUTING.md#pull-requests.

--- a/.github/workflows/multi_arch_build_portable_linux.yml
+++ b/.github/workflows/multi_arch_build_portable_linux.yml
@@ -7,7 +7,7 @@
 # 4. comm-libs (per-arch) - RCCL (parallel to math-libs)
 # 5. dctools-core (generic) - RDC (parallel to math-libs)
 # 6. profiler-apps (generic) - rocprofiler-systems (parallel to math-libs)
-# 7. media (generic) - sysdeps-amd-mesa, rocdecode (todo), rocjpeg (todo)
+# 7. media-libs (generic) - sysdeps-amd-mesa, rocdecode, rocjpeg
 
 name: Multi-Arch Build (Linux)
 
@@ -158,15 +158,15 @@ jobs:
       id-token: write
 
   # ==========================================================================
-  # STAGE: media (generic)
+  # STAGE: media-libs (generic)
   # ==========================================================================
-  media:
+  media-libs:
     needs: foundation
     uses: ./.github/workflows/multi_arch_build_portable_linux_artifacts.yml
     secrets: inherit
     with:
-      stage_name: media
-      stage_display_name: "Stage - Media"
+      stage_name: media-libs
+      stage_display_name: "Stage - Media Libs"
       timeout_minutes: 180  # 3 hours
       dist_amdgpu_families: ${{ inputs.dist_amdgpu_families }}
       rocm_package_version: ${{ inputs.rocm_package_version }}
