--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -123,6 +123,11 @@ disable_platforms = ["windows"]
 description = "IREE integration submodules"
 submodules = ["iree", "fusilli"]
 
+[source_sets.media-libs]
+description = "ROCm media libraries submodules"
+submodules = []
+disable_platforms = ["windows"]
+
 # ==============================================================================
 # BUILD STAGES - Pipeline jobs that build sets of artifact groups
 # ==============================================================================
@@ -178,9 +183,9 @@ artifact_groups = ["iree-libs"]
 description = "Profiler applications (depends on profiler-core)"
 artifact_groups = ["profiler-apps"]
 
-[build_stages.media]
+[build_stages.media-libs]
 description = "Media Libraries"
-artifact_groups = ["media"]
+artifact_groups = ["media-libs"]
 
 # ==============================================================================
 # ARTIFACT GROUPS - Logical groupings of related artifacts
@@ -296,13 +301,11 @@ type = "generic"
 artifact_group_deps = ["hip-runtime"]
 source_sets = ["iree-libs"]
 
-[artifact_groups.media]
+[artifact_groups.media-libs]
 description = "Media Libraries"
 type = "generic"
 artifact_group_deps = ["third-party-sysdeps", "base"]
-# TODO: rocm-systems included for projects/hip/VERSION (see CMakeLists.txt)
-# amd-mesa disabled on Windows via source_set
-source_sets = ["amd-mesa", "rocm-systems"]
+source_sets = ["amd-mesa", "media-libs"]
 
 # ==============================================================================
 # ARTIFACTS - The actual build outputs that can be transmitted between stages
@@ -319,10 +322,10 @@ artifact_deps = []  # No dependencies on other artifacts
 feature_group = "CORE"  # Part of core, enabled by default
 
 [artifacts.sysdeps-amd-mesa]
-artifact_group = "media"
+artifact_group = "media-libs"
 type = "target-neutral"
 artifact_deps = ["sysdeps"]
-feature_group = "MEDIA"
+feature_group = "MEDIA_LIBS" # Controlled by THEROCK_ENABLE_MEDIA_LIBS
 disable_platforms = ["windows"]
 
 [artifacts.sysdeps-expat]
@@ -576,6 +579,22 @@ artifact_deps = ["core-runtime", "core-hip", "miopen", "hipdnn", "miopen-plugin"
 artifact_group = "iree-libs"
 type = "target-neutral"
 artifact_deps = ["core-runtime", "core-hip", "hipdnn"]
+disable_platforms = ["windows"]
+
+# --- Media Integration ---
+
+[artifacts.rocdecode]
+artifact_group = "media-libs"
+type = "target-neutral"
+artifact_deps = ["core-runtime", "core-hip", "base", "sysdeps", "sysdeps-amd-mesa"]
+feature_group = "MEDIA_LIBS" # Controlled by THEROCK_ENABLE_MEDIA_LIBS
+disable_platforms = ["windows"]
+
+[artifacts.rocjpeg]
+artifact_group = "media-libs"
+type = "target-neutral"
+artifact_deps = ["core-runtime", "core-hip", "base", "sysdeps", "sysdeps-amd-mesa"]
+feature_group = "MEDIA_LIBS" # Controlled by THEROCK_ENABLE_MEDIA_LIBS
 disable_platforms = ["windows"]
 
 # --- Communication Libraries (per-arch) ---
