--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -210,7 +210,8 @@ jobs:
             --pytorch-dir "external-builds/pytorch/pytorch" \
             --pytorch-audio-dir "external-builds/pytorch/pytorch_audio" \
             --pytorch-vision-dir "external-builds/pytorch/pytorch_vision" \
-            --triton-dir "external-builds/pytorch/triton"
+            --triton-dir "external-builds/pytorch/triton" \
+            --apex-dir "external-builds/pytorch/apex"
 
       - name: Configure AWS Credentials
         if: always()
