--- a/.github/workflows/release_portable_linux_packages.yml
+++ b/.github/workflows/release_portable_linux_packages.yml
@@ -366,6 +366,7 @@ jobs:
               "rocm_version": "${{ needs.setup_metadata.outputs.rpm_version }}",
               "release_type": "${{ env.RELEASE_TYPE }}",
               "artifact_run_id": "${{ github.run_id  }}",
+              "ref": "${{ inputs.ref || '' }}",
               "native_package_type": "rpm"
             }
 
@@ -379,6 +380,7 @@ jobs:
               "rocm_version": "${{ needs.setup_metadata.outputs.deb_version }}",
               "release_type": "${{ env.RELEASE_TYPE }}",
               "artifact_run_id": "${{ github.run_id  }}",
+              "ref": "${{ inputs.ref || '' }}",
               "native_package_type": "deb"
             }
 
