Add origami to TheRock #2 (#3237)
## Motivation

Re-land of origami TheRock CI integration (old/reverted PR:
https://github.com/ROCm/TheRock/pull/2813).

The original PR was reverted because
`origami.cpython-312-x86_64-linux-gnu.so` couldn't find
`liborigami.so.1` at runtime, causing `rocm-sdk test`
(`testSharedLibrariesLoad`) to fail:
```
OSError: liborigami.so.1: cannot open shared object file: No such file or directory
```

This was due to two issues:
1. The Python extension had no RPATH pointing to the `lib/` directory
where `liborigami.so.1` is installed
2. `origami` was not registered in `_dist_info.py`, so the rocm-sdk
packaging infrastructure didn't know about it

## What changed from the original PR

-
**`build_tools/packaging/python/templates/rocm/src/rocm_sdk/_dist_info.py`**:
Added `LibraryEntry("origami", ...)` so the rocm-sdk packaging properly
tracks `liborigami.so`.
- **`rocm-libraries: shared/origami/python/CMakeLists.txt`** — Added
`INSTALL_RPATH` so the Python extension can find `liborigami.so.1`.
Removed duplicate test install of `.so` from `bin/`; the Python package
in `lib/pythonX.Y/site-packages/origami/` is used for both regular use
and testing.
- **`rocm-libraries: shared/origami/tests/CMakeLists.txt`**: Updated
installed `CTestTestfile.cmake` to set `PYTHONPATH` to the
`site-packages` directory instead of `bin/origami/`.
-
**`build_tools/github_actions/test_executable_scripts/test_origami.py`**:
Updated `PYTHONPATH` to point to `lib/pythonX.Y/site-packages/` where
the origami package is installed.

## Original PR context

Add origami as a standalone TheRock subproject with CI testing
integration. This enables independent testing of origami's C++ and
Python components as part of TheRock's CI pipeline.

### Files from original PR (unchanged)
- `math-libs/BLAS/CMakeLists.txt`: Added Origami as a TheRock subproject
with Catch2 test dependency and Python bindings enabled
- `build_tools/github_actions/fetch_test_configurations.py`: Added
origami 

--- a/build_tools/packaging/linux/package.json
+++ b/build_tools/packaging/linux/package.json
@@ -460,7 +460,14 @@
               "doc"
             ]
           },
-
+          {
+            "Name": "origami",
+            "Components": [
+              "lib",
+              "run",
+              "doc"
+            ]
+          },
           {
             "Name": "hipBLASLt",
             "Components": [
