--- a/.github/workflows/release_windows_pytorch_wheels.yml
+++ b/.github/workflows/release_windows_pytorch_wheels.yml
@@ -91,6 +91,13 @@ jobs:
       matrix:
         python_version: ["3.10", "3.11", "3.12", "3.13"]
         pytorch_git_ref: ["release/2.9", "release/2.10", "nightly"]
+        # redefine arch as inputs.x vars are not available in matrix context
+        arch: ["${{ inputs.amdgpu_family }}"]
+        exclude:
+        # gfx1153 support is only available in pytorch 2.10+
+        # see https://github.com/ROCm/TheRock/issues/2723
+        - arch: "gfx1153"
+          pytorch_git_ref: "release/2.9"
 
     uses: ./.github/workflows/build_windows_pytorch_wheels.yml
     with:
