Clarify the difference between sysdeps and other third-party deps (#3548)
## Motivation

Following up on discussion at
https://github.com/ROCm/TheRock/pull/3440#discussion_r2824891404.

The descriptions in `BUILD_TOPOLOGY.toml` for `third-party-sysdeps` and
`third-party-libs` were misleading. This adds more specific background
details explaining what qualifies as a sysdep.

## Submission Checklist

- [x] Look over the contributing guidelines at
https://github.com/ROCm/ROCm/blob/develop/CONTRIBUTING.md#pull-requests.

--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -193,11 +193,11 @@ artifact_groups = ["media-libs"]
 # These define build dependencies and source requirements
 
 [artifact_groups.third-party-sysdeps]
-description = "Critical system dependencies (always needed)"
+description = "Third-party system libraries bundled for portable distribution"
 type = "generic"
 
 [artifact_groups.third-party-libs]
-description = "Optional third-party libraries (for tests/specific features)"
+description = "Third-party libraries (typically internal dependencies, not distributed as sysdeps are)"
 type = "generic"
 artifact_group_deps = ["compiler"]
 source_sets = []  # No submodules - uses vendored/in-tree deps
@@ -316,7 +316,10 @@ source_sets = ["amd-mesa", "rocm-systems"]
 # Artifacts are the fundamental packaging units
 # Each artifact produces components: dbg, dev, doc, lib, run, test
 
-# --- Third-party Dependencies ---
+# --- Sysdeps: Bundled system libraries ---
+# Libraries built from source with SONAME rewriting and symbol versioning
+# for portable distribution. Installed into lib/rocm_sysdeps/.
+# See docs/development/dependencies.md.
 
 [artifacts.sysdeps]
 artifact_group = "third-party-sysdeps"
@@ -372,6 +375,9 @@ type = "target-neutral"
 artifact_deps = ["sysdeps", "sysdeps-libpciaccess"]  # hwloc depends on numactl (in core sysdeps) and libpciaccess
 feature_group = "CORE"
 disable_platforms = ["windows"]
+
+# --- Third-party libraries ---
+# Unlike third-party-sysdeps, these libraries are not given special treatment for portable distribution.
 
 [artifacts.host-blas]
 artifact_group = "third-party-libs"
