[debug-tools/rocgdb] Switch rocgdb submodule to amd-staging-rocgdb-16 branch (#3606)
Switch from using amd-staging to using amd-staging-rocgdb-16 branch, as
it is more stable than amd-staging.

--- a/.gitmodules
+++ b/.gitmodules
@@ -44,11 +44,11 @@
 [submodule "rocm-kpack"]
 	path = base/rocm-kpack
 	url = https://github.com/ROCm/rocm-kpack.git
-[submodule "rocgdb"]
-	path = debug-tools/rocgdb/source
-	url = https://github.com/ROCm/rocgdb.git
-	branch = amd-staging
 [submodule "libhipcxx"]
 	path = math-libs/libhipcxx
 	url = https://github.com/ROCm/libhipcxx.git
 	branch = amd-develop
+[submodule "rocgdb"]
+	path = debug-tools/rocgdb/source
+	url = https://github.com/ROCm/rocgdb.git
+	branch = amd-staging-rocgdb-16
