create runtime docker images for ocltst (#3658)
## Motivation
Creating new docker files for runtime ocltst execution. 
ocltst requires ICD Opencl.
no_rocm_image_ubuntu24_04_ocl_rt

<!-- Explain the purpose of this PR and the goals it aims to achieve.
-->

## Technical Details
Creating new docker files for runtime ocltst execution. 
ocltst requires ICD Opencl.

<!-- Explain the changes along with any relevant GitHub links. -->

## Test Plan
NA

<!-- Explain any relevant testing done to verify this PR. -->

## Test Result
NA

<!-- Briefly summarize test outcomes. -->

## Submission Checklist

- [ ] Look over the contributing guidelines at
https://github.com/ROCm/ROCm/blob/develop/CONTRIBUTING.md#pull-requests.

--- a/.github/workflows/publish_no_rocm_image_ubuntu24_04.yml
+++ b/.github/workflows/publish_no_rocm_image_ubuntu24_04.yml
@@ -28,3 +28,10 @@ jobs:
     with:
       DOCKER_FILE_NAME: no_rocm_image_ubuntu24_04_rocgdb
       DOCKER_IMAGE_NAME: no_rocm_image_ubuntu24_04_rocgdb
+  # image used in ocltst execution
+  publish_no_rocm_image_ubuntu24_04_ocl_rt:
+    needs: [publish_no_rocm_image_ubuntu24_04]
+    uses: ./.github/workflows/publish_dockerfile.yml
+    with:
+      DOCKER_FILE_NAME: no_rocm_image_ubuntu24_04_ocl_rt
+      DOCKER_IMAGE_NAME: no_rocm_image_ubuntu24_04_ocl_rt
