--- a/media-libs/artifact-rocjpeg.toml
+++ b/media-libs/artifact-rocjpeg.toml
@@ -1,6 +1,7 @@
 # rocjpeg
 [components.dbg."media-libs/rocjpeg/stage"]
 [components.dev."media-libs/rocjpeg/stage"]
+[components.doc."media-libs/rocjpeg/stage"]
 [components.lib."media-libs/rocjpeg/stage"]
 [components.test."media-libs/rocjpeg/stage"]
 include = [
